SF Primes/src/objects/Certification_Title__c.object
<CustomObject>
    <description>Sales  titles for specific certifications a sales rep can attain</description>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Certification__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Please select Active Certification.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Certification Title</relationshipLabel>
        <relationshipName>Certification_Title</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Retake_Every_X_Years__c</fullName>
        <label>Re-Take Every X Years</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>ADE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARG AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVP CVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDP ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSM-ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSR DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iADE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISE AVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISE DOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISR-Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS-Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IS-Supervisor Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Certification Title</label>
    <nameField>
        <displayFormat>CRT - A{0000}</displayFormat>
        <label>CertTitle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Title</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>